--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "vite build && esbuild server/index.ts --platform=node --packages=external --bundle --format=esm --outdir=dist",
     "start": "NODE_ENV=production node dist/index.js",
     "check": "tsc",
-    "db:push": "drizzle-kit push --force --config=./drizzle.config.ts",
+    "db:generate": "drizzle-kit generate:pg --config=./drizzle.config.ts",
+    "db:push": "drizzle-kit push:pg --config=./drizzle.config.ts",
     "db:seed": "tsx db/seed.ts"
   },
   "dependencies": {
@@ -51,9 +52,9 @@
     "cmdk": "^1.0.0",
     "connect-pg-simple": "^10.0.0",
     "date-fns": "^3.6.0",
-    "drizzle-orm": "^0.38.4",
+    "drizzle-orm": "^0.29.3",
     "drizzle-seed": "^0.3.1",
-    "drizzle-zod": "^0.6.1",
+    "drizzle-zod": "^0.3.1",
     "embla-carousel-react": "^8.3.0",
     "express": "^4.21.2",
     "express-session": "^1.18.1",
@@ -91,7 +92,7 @@
     "@types/ws": "^8.5.13",
     "@vitejs/plugin-react": "^4.3.2",
     "autoprefixer": "^10.4.20",
-    "drizzle-kit": "^0.27.1",
+    "drizzle-kit": "^0.20.14",
     "esbuild": "^0.24.0",
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.14",
